add getresult api status
